fix footer text alignment on mobile

--- a/src/css/layouts/sections/footer.scss
+++ b/src/css/layouts/sections/footer.scss
@@ -79,6 +79,7 @@ footer {
 
     @media (max-width: $breakpoint-md) {
       align-items: center;
+      text-align: center;
     }
 
     h2 {
